# covid19_pyparser

./: .envexample  .gitignore  README.md  index.py  pyproject.toml  scrapy.cfg  wuhanvirus.html
covid19_pyparser/: items.py  middlewares.py  pipelines.py  settings.py
covid19_pyparser/spiders/: covid_spider.py
tests/: test_pyparser.py
