[tool.poetry]
name = "pyparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
html5lib = "^1.0.1"
lxml = "^4.5.0"
scrapy = "^2.0.1"
selenium = "^3.141.0"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
dotenv-linter = "^0.1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
